# SchemaPilot

./: .gitignore  ALGORITHMIC_ARCHITECTURE_AND_SSOT_BLUEPRINT.md  README.md  THREAT_LANDSCAPE_AND_CHAOS_MAP.md  pyproject.toml
src/schemapilot/: adjudication.py  demo.py  pipeline.py  router.py
src/schemapilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/schemapilot/contracts/: __init__.py  chaos.py  concept.py  confidence.py  envelope.py  lineage.py  manifest.py  nulls.py  policy.py
src/schemapilot/layer0_ingestion/: __init__.py  connectors.py  drift.py  vault.py
src/schemapilot/layer1_profiling/: __init__.py  chaos_scan.py  fingerprint.py  sketches.py
src/schemapilot/layer2_alignment/: __init__.py  assignment.py  cco.py  deterministic.py  evidence.py  gate.py
src/schemapilot/layer3_standardize/: __init__.py  categorical.py  driver.py  encoding.py  nulls.py  numeric.py  temporal.py  unicode_norm.py
src/schemapilot/layer4_resolution/: __init__.py  blocking.py  clustering.py  comparison.py  fellegi_sunter.py  phonetic.py  records.py
src/schemapilot/layer5_fusion/: __init__.py  conflict.py  golden.py  strategies.py  truth_discovery.py
src/schemapilot/layer6_certification/: __init__.py  constraints.py  ssot.py  trust.py
tests/: conftest.py  test_end_to_end.py
tests/chaos/: test_domain1_structural.py  test_domain2_syntactic.py  test_domain3_semantic.py  test_domain4_systemic.py
tests/unit/: test_contracts.py  test_fusion.py  test_profiling.py  test_resolution.py
